<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current"
            android:icon="@drawable/point"
            android:title="@string/nav_menu" />
        <item
            android:id="@+id/nav_return_to_home"
            android:icon="@drawable/nav_home"
            android:title="@string/nav_return" />
        <item
            android:id="@+id/nav_current_documents"
            android:icon="@drawable/nav_document"
            android:title="@string/nav_current_documents" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_close"
            android:title="@string/nav_logout" />
    </group>
</menu>
